# LiveRtmp

./: README.md  settings.gradle
app/: build.gradle
app/src/main/cpp/: CMakeLists.txt  rtmp_jni.cpp  rtmp_wrap.cpp  rtmp_wrap.h
app/src/main/cpp/log/: LogLevelInterceptor.cpp
app/src/main/cpp/log/include/: LogDecor.h  LogLevelInterceptor.h  SimpleLog.h  log_abs.h
app/src/main/cpp/x264/include/: x264_config.h
app/src/main/java/com/hwilliamgo/livertmp/: MainActivity.java  RTMPPackage.java  ScreenLive.java
livertmp/: build.gradle  gradle.properties
livertmp/src/androidTest/java/com/hwilliamgo/livertmp/: ExampleInstrumentedTest.java
livertmp/src/main/: AndroidManifest.xml
livertmp/src/main/cpp/: CMakeLists.txt  VideoEncoder.cpp  VideoEncoder.h  api_hw_jni.cpp  rtmp_jni.cpp  rtmp_wrap.cpp  rtmp_wrap.h
livertmp/src/main/cpp/core/: AudioEncoder.cpp  VideoEncoder.cpp  hwutil.cpp  rtmp_wrap.cpp  x264_wrap.cpp
livertmp/src/main/cpp/core/include/: AudioEncoder.h  VideoEncoder.h  hwutil.h  rtmp_wrap.h  safe_queue.h  x264_wrap.h
livertmp/src/main/cpp/librtmp/: CMakeLists.txt
livertmp/src/main/cpp/log/: CMakeLists.txt  LogDecor.cpp  SimpleLog.cpp  log_abs.cpp
livertmp/src/main/cpp/log/include/: log_abs.h
livertmp/src/main/cpp/x264/include/: x264.h
livertmp/src/main/java/com/hwilliamgo/livertmp/: MainActivity.java  RTMPJni.java  RTMPX264Jni.java  ScreenLive.java  VideoCodec.java  X264Jni.java
livertmp/src/main/java/com/hwilliamgo/livertmp/jni/: FaacJni.java  JniLibLoader.java  RTMPJni.java  RTMPX264Jni.java  X264Jni.java
livertmp/src/main/libmanifest/: AndroidManifest.xml
livertmp/src/test/java/com/hwilliamgo/livertmp/: ExampleUnitTest.java
